--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,12 @@ dependencies:
   url_launcher: ^6.1.12
   intl: ^0.18.1
   provider: ^6.1.0
+  firebase_core: ^2.27.0
+  firebase_auth: ^4.17.0
+  cloud_firestore: ^4.17.0
+  firebase_storage: ^11.6.0
+  firebase_remote_config: ^4.4.0
+  firebase_analytics: 10.10.7
 
   cupertino_icons: ^1.0.6
 
